Update swagger and comment in api.go
